# cross-compile

./: .gitignore  Makefile
nonworking/atk/: Makefile
nonworking/cairo/: Makefile
nonworking/dbus/: Makefile
nonworking/e_dbus/: Makefile
nonworking/ecore/: Makefile
nonworking/edje/: Makefile
nonworking/eet/: Makefile
nonworking/eina/: Makefile
nonworking/elementary/: Makefile
nonworking/embryo/: Makefile
nonworking/espeak/: Makefile  espeak
nonworking/evas/: Makefile
nonworking/ffmpeg/: Makefile
nonworking/fishfillets/: Makefile  keymap.txt  labels.lua
nonworking/flex/: Makefile
nonworking/fontconfig/: Makefile
nonworking/fontsproto/: Makefile
nonworking/gnash/: README-Build  README-Framebuffer
nonworking/gnutls/: Makefile
nonworking/gsm/: Makefile
nonworking/gst-plugins-bad/: Makefile
nonworking/gst-plugins-base/: Makefile
nonworking/gstreamer/: Makefile
nonworking/gtk2/: Makefile
nonworking/icewm/: Makefile
nonworking/inputproto/: Makefile
nonworking/ioquake3/: Makefile
nonworking/jpeg/: Makefile
nonworking/libXft/: Makefile
nonworking/libXi/: Makefile
nonworking/libXmu/: Makefile
nonworking/libXpm/: Makefile
nonworking/libXrandr/: Makefile
nonworking/libXrender/: Makefile
nonworking/libexpat/: Makefile
nonworking/libfontenc/: Makefile
nonworking/libmad/: Makefile
nonworking/libmpeg2/: Makefile
nonworking/libogg/: Makefile
nonworking/liboil/: Makefile
nonworking/libsdl-mixer/: Makefile
nonworking/navit/patches/: configure.in  navit.graphics.sdl.c.GPS.patch  navit.graphics.sdl.c.patch  navit.graphics.sdl.makefile_am.patch  navit__font__freetype__font_freetype.c  navit__graphics__sdl__graphics_sdl.c  navit__gui__internal__gui_internal.c  navit__vehicle__Makefile.am  navit__vehicle__webos__vehicle_webos.c  navit__xpm__navit_svg2png
scripts/: unpack-doctor-rootfs
support/: build.mk  cross-compile.mk  depends.mk  download.mk  stage-rootfs.mk  staging.mk
(+45 files in other folders)
